fixed spacing of heading on contact page, updated linked components

--- a/html/public_html/assets/css/ras.css
+++ b/html/public_html/assets/css/ras.css
@@ -1,3 +1,7 @@
+.ras-text-primary {
+  color: #8d2dc2;
+}
+
 :root {
   --blue: #a3c5ec;
   --light-gray: #a1a1a1;
